--- a/3DexhbitionRoom/rooms/displayRoom2.html
+++ b/3DexhbitionRoom/rooms/displayRoom2.html
@@ -19,8 +19,9 @@
         }
     </style>
     <script src="../support/p5.min.js"></script>
-    <script src="objects.js"></script>
-    <script src="vltd.js"></script>
+    <script src="../pack/mathObj.js"></script>
+    <script src="../pack/rooms/displayRoom2.js"></script>
+    <script src="../pack/vltd.js"></script>
 </head>
 <body>
     
