继续分离操作和代码

--- a/3DexhbitionRoom/rooms/displayRoom2.html
+++ b/3DexhbitionRoom/rooms/displayRoom2.html
@@ -20,6 +20,7 @@
     </style>
     <script src="../support/p5.min.js"></script>
     <script src="../pack/mathObj.js"></script>
+    <script src="../pack/roomObj.js"></script>
     <script src="../pack/rooms/displayRoom2.js"></script>
     <script src="../pack/vltd.js"></script>
 </head>
