--- a/3DexhbitionRoom/rooms/displayRoomBasic.html
+++ b/3DexhbitionRoom/rooms/displayRoomBasic.html
@@ -5,26 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D展览馆</title>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body{
-            width: 100vw;
-            height: 100vh;
-            overflow: hidden;
-            cursor: none;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="../pack/csspack/style.css">
     <script src="../support/p5.min.js"></script>
+    <script src="../pack/publicVariable.js"></script>
+    <script src="../pack/hudObj.js"></script>
     <script src="../pack/mathObj.js"></script>
     <script src="../pack/roomObj.js"></script>
     <script src="../pack/rooms/basicDisplayRoom.js"></script>
     <script src="../pack/vltd.js"></script>
 </head>
 <body>
-    
+    <div class="hudLayer"></div>
 </body>
 </html>
