--- a/3DexhbitionRoom/rooms/displayRoom1.html
+++ b/3DexhbitionRoom/rooms/displayRoom1.html
@@ -7,12 +7,14 @@
     <title>3D展览馆</title>
     <link rel="stylesheet" type="text/css" href="../pack/csspack/style.css">
     <script src="../support/p5.min.js"></script>
+    <script src="../pack/publicVariable.js"></script>
+    <script src="../pack/hudObj.js"></script>
     <script src="../pack/mathObj.js"></script>
     <script src="../pack/roomObj.js"></script>
     <script src="../pack/rooms/displayRoom1.js"></script>
     <script src="../pack/vltd.js"></script>
 </head>
 <body>
-    
+    <div class="hudLayer"></div>
 </body>
 </html>
