git出bug了再交一次

--- a/3DexhbitionRoom/readme/readme.html
+++ b/3DexhbitionRoom/readme/readme.html
@@ -22,27 +22,27 @@
 <h3 class="mume-header" id="%E7%9B%AE%E5%BD%95">&#x76EE;&#x5F55;</h3>
 
 <p>玩家<br>
-<a href="contents\player\player.html">玩家对象</a></p>
+<a href="contents/player/player.html">玩家对象</a></p>
 <p>
   基本图形
 <br>
-<a href="contents\T1\T1cube.html">T1 长方体</a>
+<a href="contents/T1/T1cube.html">T1 长方体</a>
 <a href="../objectsTest/T1.html">体验馆</a>
 <br>
-<a href="contents\T2\T2sphere.html">T2 球体</a>
+<a href="contents/T2/T2sphere.html">T2 球体</a>
 <a href="../objectsTest/T2.html">体验馆</a>
 <br>
-<a href="contents\T3\T3cone.html">T3 圆锥</a>
+<a href="contents/T3/T3cone.html">T3 圆锥</a>
 <a href="../objectsTest/T3.html">体验馆</a>
 <br>
-<a href="contents\T4\T4cylinder.html">T4 圆柱</a>
+<a href="contents/T4/T4cylinder.html">T4 圆柱</a>
 <a href="../objectsTest/T4.html">体验馆</a>
 </p>
 
 <p>展示屏<br>
-<a href="contents\T11\T11displayScreen.html">T11 展示屏</a></p>
+<a href="contents/T11/T11displayScreen.html">T11 展示屏</a></p>
 <p>展示柜<br>
-<a href="contents\T21\T21displayBox.html">T21 展示柜</a></p>
+<a href="contents/T21/T21displayBox.html">T21 展示柜</a></p>
 
 <p>
   封装函数
